| https://github.com/knative/client/pull/1055[#1055]

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]

| 🎁
| Add `kn service import` command (experimental)
| https://github.com/knative/client/pull/1065[#1065]

| 🎁
| Add arm64 binary to the release
| https://github.com/knative/client/pull/1106[#1106]
|===

## v0.18.1 (2020-10-13)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]

| 🐛
| Fix for test flake when sync waiting and an intermediate error occurs
| https://github.com/knative/client/pull/1052[#1052]
|===

## v0.17.2 (2020-10-12)
[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add WithLabel list filter to serving client lib
| https://github.com/knative/client/pull/1054[#1054]

| 🐛
| Fix for test flake when sync waiting and an intermediate error occurs
| https://github.com/knative/client/pull/1052[#1052]
|===

## v0.18.0 (2020-10-07)

[cols="1,10,3", options="header", width="100%"]
|===
| | Description | PR

| 🎁
| Add aliases for commands (plural forms, `ksvc`, `ls`)
| https://github.com/knative/client/pull/1041[#1041]

| 🎁
| Add `--annotation-service` and `--annotation-revision` to `kn service create/update`
| https://github.com/knative/client/pull/1029[#1029]

| 🎁
| Add `channel list-types` command
| https://github.com/knative/client/pull/1027[#1027]

| ✨
| Update Knative Serving and Eventing dependencies to 0.18
| https://github.com/knative/client/pull/1025[#1025]

| 🐛
| Fix autoscaling annotations in service metadata
| https://github.com/knative/client/pull/1021[#1021]

| 🎁
| Add `kn subscription` command
| https://github.com/knative/client/pull/1013[#1013]

| 🐛
| Fix `kn service export` example documentation
| https://github.com/knative/client/pull/1006[#1006]

| 🎁
| Add support for service's initial scale via the `--scale-init` flag