@@ -52,6 +52,10 @@
 | 🎁
 | Add arm64 binary to the release
 | https://github.com/knative/client/pull/1106[#1106]
+
+| 🗑
+| Drop deprecated `--requests-cpu,--requests-memory,--limits-cpu,--limits-memory` flags support
+| https://github.com/knative/client/pull/1110[#1110]
 |===
 
 ## v0.18.1 (2020-10-13)
